--- a/components/layouts/Layout.module.css
+++ b/components/layouts/Layout.module.css
@@ -1,10 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Anton&display=swap');
 
 .header {
+    position: fixed;
     display: flex;
     align-items: center;
-    background-color: #e8eaed;
     height: 80px;
+    width: 100%;
 }
 
 .logo{
