--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,3 +1,33 @@
-.search {
-    display: flex;
+.home {
+    padding-top: 90px;
 }
+
+.form{
+    display: flex;
+    width: 500px;
+}
+
+.form input {
+    background-color: #e8e8e8;
+    padding-left: 30px;
+    width: 100%;
+    height: 50px;
+    border-bottom-left-radius: 8px;
+    border-top-left-radius: 8px;
+}
+
+.form button {
+    background-color: #e8e8e8;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 50px;
+    border-top-right-radius: 8px;
+    border-bottom-right-radius: 8px;
+}
+
+
+
+
+
+
