--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,10 +1,12 @@
 .home {
+    margin-left: 20px;
     padding-top: 90px;
 }
 
 .form{
+    gap: 10px;
     display: flex;
-    width: 500px;
+    width: 800px;
 }
 
 .form input {
@@ -12,18 +14,14 @@
     padding-left: 30px;
     width: 100%;
     height: 50px;
-    border-bottom-left-radius: 8px;
-    border-top-left-radius: 8px;
 }
 
 .form button {
-    background-color: #e8e8e8;
+    width: 40%;
+    background-color: lightgreen;
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 50px;
-    border-top-right-radius: 8px;
-    border-bottom-right-radius: 8px;
 }
 
 
