--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,5 +1,18 @@
+.listen {
+    margin-left: 20px;
+    margin-right: 20px;
+    padding-top: 90px;
+}
 
 
+
+.description {
+    background-image: url("https://blog.beatrising.com/wp-content/uploads/2020/02/How-you-must-submit-your-tracks-to-the-Spotify-Playlist-Curator.jpg");
+    background-repeat: no-repeat;
+    background-size: 100%;
+    background-position: center;
+    height: 820px;
+}
 
 
 
